# battery-monitoring-systems

./: README.md
BMS/: cell_forecasting_and_classification.py  dummy_battery_data.csv  generate_battery_data.py
battery-monitor-systems/: setup_battery_monitor_v2.sh
battery-monitor-systems/battery-monitor/: README.md  docker-compose.yml
battery-monitor-systems/battery-monitor/.devcontainer/: devcontainer.json
battery-monitor-systems/battery-monitor/backend/: .env.example  package.json
battery-monitor-systems/battery-monitor/backend/src/: app.js  server.js
battery-monitor-systems/battery-monitor/frontend/: package.json
battery-monitor-systems/battery-monitor/frontend/public/: index.html
battery-monitor-systems/battery-monitor/frontend/src/: App.js
battery-monitor-systems/battery-monitor/frontend/src/components/: MapClusterHeat.js  Navbar.js
battery-monitor-systems/battery-monitor/frontend/src/pages/: BatteryMapPage.js
battery-monitoring-systems-flux/: .gitignore  PROJECT_SUMMARY.md  README-local.md  README-production.md  config_local.yaml  config_prod.yaml  create_database_from_excel.py  demo_cd4ml_system.py  main.py  pyproject.toml  start_system.py
battery-monitoring-systems-flux/.cursor/rules/: battery-monitoring-systems-rules.mdc
battery-monitoring-systems-flux/battery_monitoring/: __init__.py
battery-monitoring-systems-flux/battery_monitoring/core/: __init__.py  config.py  database.py  exceptions.py  logger.py  logging_utils.py
battery-monitoring-systems-flux/battery_monitoring/llm/: __init__.py  chatbot.py  evaluator.py  llmops.py
battery-monitoring-systems-flux/battery_monitoring/ml/: __init__.py  anomaly_detector.py  cell_predictor.py  forecaster.py  model_evaluator.py  model_trainer.py
battery-monitoring-systems-flux/battery_monitoring/mlops/: __init__.py  alerting_system.py  cd4ml_pipeline.py  cd4ml_system.py  enhanced_monitor.py  monitor.py
battery-monitoring-systems-flux/battery_monitoring/mlops/examples/: __init__.py  cd4ml_demo.py
battery-monitoring-systems-flux/battery_monitoring/services/: data_service.py
battery-monitoring-systems-flux/battery_monitoring/web_app/: api.py  websocket.py
battery-monitoring-systems-flux/web-app/: README.md
battery-monitoring-systems-flux/web-app/backend/: __init__.py  api.py  main.py  simple_api.py  websocket.py
battery-monitoring-systems-flux/web-app/frontend/: README.md
battery-monitoring-systems-flux/web-app/frontend/src/app/: globals.css  layout.tsx  page.tsx
battery-monitoring-systems-flux/web-app/frontend/src/app/chat/: page.tsx
battery-monitoring-systems-flux/web-app/frontend/src/app/geo-dashboard/: page.tsx  types.ts
battery-monitoring-systems-flux/web-app/frontend/src/app/geo-dashboard/components/: BasicMap.tsx  MapComponent.tsx  MapWrapper.tsx  SimpleMap.tsx  TemperatureChart.tsx  VoltageChart.tsx
battery-monitoring-systems-flux/web-app/frontend/src/app/llm/: page.tsx
battery-monitoring-systems-flux/web-app/frontend/src/app/mlops/: page.tsx
bms-fitone-ml/: gitignore  requirements.txt
bms-fitone-ml/data_generator/: generate_battery_data.py
bms-fitone-ml/source_code/notebooks/: cell_forecasting_and_classification.py
